--- a/index.html
+++ b/index.html
@@ -4,9 +4,76 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" href="../../favicon.ico">
+    <link rel="canonical" href="https://getbootstrap.com/docs/3.4/examples/starter-template/">
+
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+    <!-- Custom styles for this template -->
+    <link rel="stylesheet" href="css/started-template.css">
+
+    <title>PRACTICA</title>
 </head>
 <body>
+    <H1 class="text-center text-primary">EL REY DE LA MILANGA</H1>
+    <H2 class="text-center">Acerca de nosotros</H2>
+    <div class="started-template">
+        <div class= lead lead-center>
+            <p id="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi facilis omnis necessitatibus expedita voluptates corrupti, deserunt quo excepturi laborum animi?</p>
+        <span id="adicional" class="oculto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum rerum autem sequi quia odio ducimus maiores repudiandae eum quae velit, voluptates ex voluptatum praesentium quisquam! Eius sed et sunt. Repudiandae.</span>
+        </div>
+        <a id="enlace" href="#" onclick="muestra();">Seguir leyendo</a>
+        <a id="ocultar" class="oculto" href="#" onclick="oculta();"> ocultar</a>
+    </div>
+       
+    <div class="container">
+        <div class="col-md-12" style="text-align: center;">
+            <h1 class="text-success">NUESTROS PLATOS</h1>
+        </div>
+        <div class="container">
+          <div class="row g-2">
+            <div class="col-md-2  ">
+            <h3>Milanesa Clasica</h3>
+            <b>Detalles: </b>Milanesa con papas o puré<br/>
+             <b>Precio: $</b><span id="precio-1">1000</span>  <br/>                 
+           <button id="btn-1" type="button"class="btn btn-primary">Agregar</button>                 
+               </div>
+            <div class="col-md-2 ">
+              <h3>Milanesa Napolitana</h3>
+              <b>Detalles: </b>Milanesa con salsa y queso con papas o puré<br/>
+              <b>Precio: $</b><span id="precio-2">1500</span> <br/>               
+              <button id="btn-2" type="button"class="btn btn-primary">Agregar</button>
+          </div>
+
+          <div class="col-md-2 ">
+            <h3>Milanesa de Molleja</h3>
+            <b>Detalles: </b>Milanesa de Molleja con papas rústicas<br/>
+            <b>Precio: $</b><span id="precio-3">2200</span> <br/>             
+            <button id="btn-3" type="button" class="btn btn-primary">Agregar</button>
+        </div>
+        <div class="col-md-2 ">
+            <h3>Milanesa Veggies</h3>
+            <b>Detalles: </b>Milanesa de berenjena con ensalada<br/>
+            <b>Precio: $</b><span id="precio-4">1700</span> <br/>             
+            <button id="btn-4" type="button"  class="btn btn-primary">Agregar</button>
+        </div>
+        <div class="col-md-2 ">
+            <h3>Milanesa de Pollo</h3>
+            <b>Detalles: </b>Milanesa de pollo con queso y pure mixto<br/>
+            <b>Precio: $</b><span id="precio-5">1350</span> <br/>             
+            <button id="btn-5" type="button" class="btn btn-primary">Agregar</button>
+        </div>
+    </div>
+   </div>
+
+          <!-- Respuestas -->
+          <div> 
+            <p id="total"></p>
+          </div>
+          <div id="carrito"> 
+          </div>
+
+
     <script src="js/index.js"></script>
 </body>
 </html>
