--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="icon" href="../../favicon.ico">
     <link rel="canonical" href="https://getbootstrap.com/docs/3.4/examples/starter-template/">
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-    <!-- Custom styles for this template -->
+<!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    <!-- Custom styles for this template -->
     <link rel="stylesheet" href="css/started-template.css">
     <title>PROYECTO JS</title>
 </head>
-<header>
-    <H1 class="text-center text-primary">EL REY DE LA MILANGA</H1>
-    <H2 class="text-center">Acerca de nosotros</H2>
+<header  >
+    <H1 class="text-center">EL REY DE LA MILANGA</H1>
+    <H2 class="text-center">¿Por que elejirnos?</H2>
     <div class="text">
         <div class= lead lead-center>
          <p id="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi facilis omnis necessitatibus expedita voluptates corrupti, deserunt quo excepturi laborum animi?</p>
@@ -27,72 +27,96 @@
 </div>
 </header>
 <body>
-    <main>
-        <section>
-            <div class="col-md-12" style="text-align: center;">
-                <h1 class="text-success">NUESTROS PLATOS</h1>
+    <main class="p-4 " >
+      <div class="container">
+        <div class="row">
+            <div class="col" style="text-align: center;">
+                <h1 class="text-danger p-4 ">NUESTROS PLATOS</h1>
             </div>
-            <div class="container">
-              <div class="row g-2 p-5">
-                <div class="col-md-2  ">
-                <h3>Milanesa Clasica</h3>
-                <b>Detalles: </b>Milanesa con papas o puré<br/>
-                 <b>Precio: $</b><span id="precio-1">1000</span>  <br/>                 
-               <button id="btn-1" type="button"class="btn btn-primary">Agregar</button>                 
-                   </div>
-                <div class="col-md-2 ">
-                  <h3>Milanesa Napolitana</h3>
+          </div>     
+        </div>
+        <div>
+          <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
+            <div class="col">
+              <div class="card bg-info"  >
+                <img src="image/milanesaclasica.jpeg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h3>Milanesa Clasica</h3>
+                  <b class="text-center" >Detalles: </b>Milanesa de carne vacuna con  queso con papas o puré.<br/>
+                  <b>Precio: $</b><span id="precio-1">1100</span> <br/>               
+                  <button id="btn-1" type="button"class="btn btn-primary">Agregar</button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card bg-info"  >
+                <img  src="image/milanapo.jpeg"  alt="...">
+                <div class="card-body">
+                  <h3 class="text-center">Milanesa Napolitana</h3>
                   <b>Detalles: </b>Milanesa con salsa y queso con papas o puré<br/>
                   <b>Precio: $</b><span id="precio-2">1500</span> <br/>               
                   <button id="btn-2" type="button"class="btn btn-primary">Agregar</button>
+                </div>
               </div>
-              <div class="col-md-2 ">
-                <h3>Milanesa de Molleja</h3>
-                <b>Detalles: </b>Milanesa de Molleja con papas rústicas<br/>
-                <b>Precio: $</b><span id="precio-3">2200</span> <br/>             
-                <button id="btn-3" type="button" class="btn btn-primary">Agregar</button>
             </div>
-            <div class="col-md-2 ">
-                <h3>Milanesa Veggies</h3>
-                <b>Detalles: </b>Milanesa de berenjena con ensalada<br/>
-                <b>Precio: $</b><span id="precio-4">1700</span> <br/>             
-                <button id="btn-4" type="button"  class="btn btn-primary">Agregar</button>
+            <div class="col">
+              <div class="card bg-info"  >
+                <img src="image/milamolle.jpeg"  alt="...">
+                <div class="card-body">
+                  <h3>Milanesa de Molleja</h3>
+                  <b>Detalles: </b>Milanesa de Molleja con papas rústicas<br/>
+                  <b>Precio: $</b><span id="precio-3">2200</span> <br/>             
+                  <button id="btn-3" type="button" class="btn btn-primary">Agregar</button>
+                </div>
+              </div>
             </div>
-            <div class="col-md-2 ">
-                <h3>Milanesa de Pollo</h3>
-                <b>Detalles: </b>Milanesa de pollo con queso y pure mixto<br/>
-                <b>Precio: $</b><span id="precio-5">1350</span> <br/>             
-                <button id="btn-5" type="button" class="btn btn-primary">Agregar</button>
+            <div class="col">
+              <div class="card bg-info"  >
+                <img src="image/milaveggie.png"  alt="...">
+                <div class="card-body">
+                  <h3>Milanesa Veggie</h3>
+                  <b>Detalles: </b>Milanesa de berenjena con ensalada<br/>
+                  <b>Precio: $</b><span id="precio-4">1700</span> <br/>             
+                  <button id="btn-4" type="button"  class="btn btn-primary">Agregar</button>
+                </div>
+              </div>
             </div>
-        </div>
-      </div>
-    </div>
+            <div class="col">
+              <div class="card bg-info" >
+                <img src="image/milapollo.jpeg" alt="...">
+                <div class="card-body">
+                  <h3>Milanesa de Pollo</h3>
+                  <b>Detalles: </b>Milanesa de pollo con queso y pure mixto<br/>
+                  <b>Precio: $</b><span id="precio-5">1350</span> <br/>             
+                  <button id="btn-5" type="button" class="btn btn-primary">Agregar</button>
+                </div>
+              </div>
+            </div>
+            <div class="container ">
+              <div class="row p-10 ">
+                <div class="col">
+              <div class="form bg-primary p-3">
+                <form id="formulario" class=" display-8 text-center ">
+                  <input type="text" placeholder="ej:Juan Perez">
+                  <input type="tel" placeholder="ej:15-4567-8901">
+                  <input type="submit" value="Enviar Pedido">
+             </form>
+            </div>
+             </div>
         </section>
-          <section class="pedido">
+          <section class="container-lista">
             <div class="container-precio ">
-                <div class="row p-4">
+                <div class="row ">
                    <div class="col"> 
                  <div> 
-                   <p id="total" class= "badge bg-primary  text-center>"></p>
+                   <p id="total" class= " display-6 bg-warning text-center fw-bold"></p>
                  </div>
                </div>
            </div>
              <div id="carrito"> 
                  </div>
             </div>  
-          </section>
-          <section>
-              <div>
-                <form id="formulario" class="text-center">
-                    <input type="text" placeholder="ej:Juan Perez">
-                    <input type="tel" placeholder="ej:15-4567-8901">
-                    <input type="submit" value="Enviar Pedido">
-               </form>
-              </div>
-          </section>
     </main>
-          <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
