--- a/index.html
+++ b/index.html
@@ -7,14 +7,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../../favicon.ico">
     <link rel="canonical" href="https://getbootstrap.com/docs/3.4/examples/starter-template/">
-    <!-- Bootstrap core CSS -->
+
 <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    <!-- Custom styles for this template -->
     <link rel="stylesheet" href="css/started-template.css">
+
     <title>PROYECTO JS</title>
 </head>
+  <!-- Nav-->
+  <header class="sticky-top">
+    <nav
+    class="navbar navbar-expand-lg bg-black text-uppercase "
+    id="mainNav">
+    <div class="container">
+      <a class="navbar-brand text-white" href="index.html">El rey de la milanesa</a>
+      <button
+        class=" navbar-toggler text-uppercase font-weight-bold bg-warning text-black"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarResponsive"
+        aria-controls="navbarResponsive"
+        aria-expanded="false"
+        aria-label="Toggle navigation">
+         <!-- MENU HAMBURGUESA-->
+        Menu
+        <i class="fas fa-bars"></i>
+      </button>
+       <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded text-warning" href="index.html"
+              >INICIO</a>
+          </li>
+          <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded text-warning" href="pages/contacto.html"
+              >NOSOTROS</a>
+          </li>
+     
+        </ul>
+      </div>
+    </div>
+  </nav>
 <header  >
-    <H1 class="text-center">EL REY DE LA MILANGA</H1>
+    <H1 class="text-center">EL REY DE LA MILANESA</H1>
     <H2 class="text-center">¿Por que elejirnos?</H2>
     <div class="text">
         <div class= lead lead-center>
@@ -117,6 +152,31 @@
                  </div>
             </div>  
     </main>
+    <!-- Footer-->
+ <footer class="footer text-center">
+  <div class="container-footer">
+    <div class="grow">
+      <!-- Footer Social Icons-->
+      <div class="col-lg-12 ">
+        <h4 class="text-uppercase mb-4">Buscanos en Redes</h4>
+        <a class="btn btn-outline-light btn-social mx-1" href="#!"
+          ><i class="fab fa-fw fa-facebook-f"></i></a>
+        <a class="btn btn-outline-light btn-social mx-1" href="#!"
+          ><i class="fab fa-fw fa-twitter"></i ></a>
+        <a class="btn btn-outline-light btn-social mx-2" href="#!"
+          ><i class="fab fa-fw fa-linkedin-in"></i></a>
+    </div>
+</footer>
+</footer>
+<!-- Copyright Section-->
+<div class="copyright py-4 text-center text-white">
+  <div class="container">
+    <small>Copyright &copy;Sebastian Cardozo</small>
+  </div>
+</div>
     <script src="js/index.js"></script>
+    <script
+    src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
+    crossorigin="anonymous"></script>
 </body>
 </html>
