--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
               <div class="card bg-info"  >
                 <img src="image/milanesaclasica.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h3>Milanesa Clasica</h3>
-                  <b class="text-center" >Detalles: </b>Milanesa de carne vacuna con  queso con papas o puré.<br/>
+                  <h4>Milanesa Clasica</h4>
+                  <b class="text-center" >Detalles: </b>Milanesa con papas o puré.<br/>
                   <b>Precio: $</b><span id="precio-1">1100</span> <br/>               
                   <button id="btn-1" type="button"class="btn btn-primary">Agregar</button>
                 </div>
@@ -88,7 +88,7 @@
               <div class="card bg-info"  >
                 <img  src="image/milanapo.jpeg"  alt="...">
                 <div class="card-body">
-                  <h3 class="text-center">Milanesa Napolitana</h3>
+                  <h4 class="text-center">Milanesa Napolitana</h4>
                   <b>Detalles: </b>Milanesa con salsa y queso con papas o puré<br/>
                   <b>Precio: $</b><span id="precio-2">1500</span> <br/>               
                   <button id="btn-2" type="button"class="btn btn-primary">Agregar</button>
@@ -99,7 +99,7 @@
               <div class="card bg-info"  >
                 <img src="image/milamolle.jpeg"  alt="...">
                 <div class="card-body">
-                  <h3>Milanesa de Molleja</h3>
+                  <h4>Milanesa de Molleja</h4>
                   <b>Detalles: </b>Milanesa de Molleja con papas rústicas<br/>
                   <b>Precio: $</b><span id="precio-3">2200</span> <br/>             
                   <button id="btn-3" type="button" class="btn btn-primary">Agregar</button>
@@ -110,7 +110,7 @@
               <div class="card bg-info"  >
                 <img src="image/milaveggie.png"  alt="...">
                 <div class="card-body">
-                  <h3>Milanesa Veggie</h3>
+                  <h4>Milanesa Veggie</h4>
                   <b>Detalles: </b>Milanesa de berenjena con ensalada<br/>
                   <b>Precio: $</b><span id="precio-4">1700</span> <br/>             
                   <button id="btn-4" type="button"  class="btn btn-primary">Agregar</button>
@@ -121,7 +121,7 @@
               <div class="card bg-info" >
                 <img src="image/milapollo.jpeg" alt="...">
                 <div class="card-body">
-                  <h3>Milanesa de Pollo</h3>
+                  <h4>Milanesa de Pollo</h4>
                   <b>Detalles: </b>Milanesa de pollo con queso y pure mixto<br/>
                   <b>Precio: $</b><span id="precio-5">1350</span> <br/>             
                   <button id="btn-5" type="button" class="btn btn-primary">Agregar</button>
