--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -18,7 +18,7 @@
     class="navbar navbar-expand-lg bg-black text-uppercase "
     id="mainNav">
     <div class="container">
-      <a class="navbar-brand text-white" href="index.html">El rey de la milanesa</a>
+      <a class="navbar-brand text-white" href="../index.html">El rey de la milanesa</a>
       <button
         class=" navbar-toggler text-uppercase font-weight-bold bg-warning text-black"
         type="button"
