se agregan icons

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </div>     
         </div>
         <div>
-          <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
+          <div class="row ">
             <div class="col">
               <div class="card bg-info"  >
                 <img src="image/milanesaclasica.jpeg" class="card-img-top" alt="...">
@@ -80,7 +80,7 @@
                   <h4>Milanesa Clasica</h4>
                   <b class="text-center" >Detalles: </b>Milanesa con papas o puré.<br/>
                   <b>Precio: $</b><span id="precio-1">1100</span> <br/>               
-                  <button id="btn-1" type="button"class="btn btn-primary">Agregar</button>
+                  <button id="btn-1" type="button"class="btn btn-primary">Agregar <i class="fas fa-shopping-cart"></i></button>
                 </div>
               </div>
             </div>
@@ -91,7 +91,7 @@
                   <h4 class="text-center">Milanesa Napolitana</h4>
                   <b>Detalles: </b>Milanesa con salsa y queso con papas o puré<br/>
                   <b>Precio: $</b><span id="precio-2">1500</span> <br/>               
-                  <button id="btn-2" type="button"class="btn btn-primary">Agregar</button>
+                  <button id="btn-2" type="button"class="btn btn-primary">Agregar <i class="fas fa-shopping-cart"></i></button>
                 </div>
               </div>
             </div>
@@ -102,7 +102,7 @@
                   <h4>Milanesa de Molleja</h4>
                   <b>Detalles: </b>Milanesa de Molleja con papas rústicas<br/>
                   <b>Precio: $</b><span id="precio-3">2200</span> <br/>             
-                  <button id="btn-3" type="button" class="btn btn-primary">Agregar</button>
+                  <button id="btn-3" type="button" class="btn btn-primary">Agregar <i class="fas fa-shopping-cart"></i></button>
                 </div>
               </div>
             </div>
@@ -113,7 +113,7 @@
                   <h4>Milanesa Veggie</h4>
                   <b>Detalles: </b>Milanesa de berenjena con ensalada<br/>
                   <b>Precio: $</b><span id="precio-4">1700</span> <br/>             
-                  <button id="btn-4" type="button"  class="btn btn-primary">Agregar</button>
+                  <button id="btn-4" type="button"  class="btn btn-primary">Agregar <i class="fas fa-shopping-cart"></i></button>
                 </div>
               </div>
             </div>
@@ -124,7 +124,7 @@
                   <h4>Milanesa de Pollo</h4>
                   <b>Detalles: </b>Milanesa de pollo con queso y pure mixto<br/>
                   <b>Precio: $</b><span id="precio-5">1350</span> <br/>             
-                  <button id="btn-5" type="button" class="btn btn-primary">Agregar</button>
+                  <button id="btn-5" type="button" class="btn btn-primary">Agregar <i class="fas fa-shopping-cart"></i></button>
                 </div>
               </div>
             </div>
@@ -148,10 +148,7 @@
                    <p id="total" class= " display-6 bg-warning text-center fw-bold"></p>
                  </div>
                </div>
-           </div>
-             <div id="carrito"> 
-                 </div>
-            </div>  
+             <div id="carrito" class="bg-succcess"> </div>
     </main>
     
     <!-- Footer-->
