se aplica sweetalert2

--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
                  </div>
                </div>
              <div id="carrito" class="bg-succcess"> </div>
+            </div>
+            <p class="precioProducto">Precio total: $<span id="precioTotal">0</span></p>
+            <button id="vaciar-carrito" class="boton-agregar">Vaciar carrito</button>
+        </div>
     </main>
     
     <!-- Footer-->
