--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
                </div>
              <div id="carrito" class="bg-succcess"> </div>
             </div>
-            <p class="precioProducto">Precio total: $<span id="precioTotal">0</span></p>
-            <button id="vaciar-carrito" class="boton-agregar">Vaciar carrito</button>
+   
+            <button id="vaciar-carrito" >Vaciar carrito</button>
         </div>
     </main>
     
