Se agregan Sweetalert2 a inicio

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
              <div id="carrito" class="bg-succcess"> </div>
             </div>
    
-            <button id="vaciar-carrito" >Vaciar carrito</button>
+            <button class="btn btn-danger" id="vaciarCarrito" >Vaciar carrito</button>
         </div>
     </main>
     
