--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
- 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,11 +7,9 @@
     <link rel="icon" href="../../favicon.ico">
     <link rel="canonical" href="https://getbootstrap.com/docs/3.4/examples/starter-template/">
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
 <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    <!-- Custom styles for this template -->
     <link rel="stylesheet" href="css/started-template.css">
-
     <title>PROYECTO JS</title>
 </head>
   <!-- Nav-->
@@ -154,13 +151,12 @@
             <button class="btn btn-danger" id="vaciarCarrito" >Vaciar carrito</button>
         </div>
     </main>
-    
     <!-- Footer-->
  <footer class="footer text-center">
   <div class="container-footer">
-    <div class="grow">
+    <div class="row">
       <!-- Footer Social Icons-->
-      <div class="col-lg-12 ">
+      <div class="col">
         <h4 class="text-uppercase mb-4">Buscanos en Redes</h4>
         <a class="btn btn-outline-light btn-social mx-1" href="#!"
           ><i class="fab fa-fw fa-facebook-f"></i></a>
@@ -169,7 +165,6 @@
         <a class="btn btn-outline-light btn-social mx-2" href="#!"
           ><i class="fab fa-fw fa-linkedin-in"></i></a>
     </div>
-</footer>
 </footer>
 <!-- Copyright Section-->
 <div class="copyright py-4 text-center text-white">
