--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
-    <link rel="icon" href="../../favicon.ico">
-    <link rel="canonical" href="https://getbootstrap.com/docs/3.4/examples/starter-template/">
+   <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="../css/started-template.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    <!-- Custom styles for this template -->
+    <link rel="stylesheet" href="../css/started-template.css">   
     <title>PROYECTO JS</title>
 </head>
-  <!-- Nav-->
-  <header class="sticky-top">
+<body>
+   <!-- Nav-->
+   <header class="sticky-top">
     <nav
     class="navbar navbar-expand-lg bg-black text-uppercase "
     id="mainNav">
     <div class="container">
-      <a class="navbar-brand text-white" href="../index.html">El rey de la milanesa</a>
+      <a class="navbar-brand text-white" href="index.html">El rey de la milanesa</a>
       <button
         class=" navbar-toggler text-uppercase font-weight-bold bg-warning text-black"
         type="button"
@@ -35,65 +38,81 @@
         <ul class="navbar-nav ms-auto">
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-3 px-0 px-lg-3 rounded text-warning" href="../index.html"
-              >INICIO</a>
+               >INICIO</a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded text-warning" href="contacto.html"
-              >Contacto</a>
+            <a class="nav-link py-3 px-0 px-lg-3 rounded text-warning" href="pages/contacto.html"
+              >NOSOTROS</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-</head>
-<body>
-   <!-- Main-->
- <section class="container">
-   <div class="row" >
-     <div class=" col">
-      <div class="card bg-dark text-white">
-        <img src="../image/opinion.jpeg" class="img-fluid" alt="...">
-        <div class="card-img-overlay">
-          <h5 class="card-title text-black text-bold text-center display-5">¿Algo que te gustaria sugerirnos?</h5>
-          <p class="card-text text-black text-center display-7">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-        <p class="text-center text-warning display-6">Envía tu comentario</p>
+  <main>
+      <div class="section " id="index-banner">
+        <div class="container">
+          <h2 class="header center orange-text">Envianos tus sugerencias</h2>
       </div>
-     </div>
-   </div>
-    <!-- Formulario JS-->
-  <section id="ContentFormulario">
-    <div class=" text-center  p-4 display-6 bg-dark  ">
-      <button onclick="GeneraForm()">Haz click Aquí</button>
+      <div class="container">
+        <div class="section">
+          <div class="row">
+            <div class="col s12 m12">
+              <div class="icon-block">
+                <div class="input-field col s6">
+                  <input placeholder="Ej Juan Perez" id="nombre" type="text" class="validate">
+                  <label for="nombre">Introduce tu nombre</label>
+                </div>
+              </div>
+              <div class="icon-block">
+                <div class="input-field col s6">
+                  <input placeholder="Ej. sebas@gmail.com" id="correo" type="text" class="validate">
+                  <label for="nombre">Introduce tu correo</label>
+                </div>
+              </div>
+              <div class="form-group text-center p-5">
+                <textarea placeholder="Escribe tu mensaje aquí" id="mensaje" class="form-control" name="message" rows="10" required></textarea>
+              </div>
+            <div class="col s12 m12 button-align p-5">
+              <button id="buscar" class="btn waves-effect red lighten-2" name="action">
+                Enviar mensaje
+              </button>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col s12 m12">
+                <span id="resultado"></span>
+            </div>
+          </div>      
+          </div>
+      </div>
+      <div class="text-center">
+        <img src="../image/sugerencias.png" class="rounded" alt="...">
+      </div>
+  </main>
+    <!-- Footer-->
+    <footer class="footer text-center">
+      <div class="container-footer">
+        <div class="row">
+          <!-- Footer Social Icons-->
+          <div class="col ">
+            <h4 class="text-uppercase mb-4">Buscanos en Redes</h4>
+            <a class="btn btn-outline-light btn-social mx-1" href="#!"
+              ><i class="fab fa-fw fa-facebook-f"></i></a>
+            <a class="btn btn-outline-light btn-social mx-1" href="#!"
+              ><i class="fab fa-fw fa-twitter"></i ></a>
+            <a class="btn btn-outline-light btn-social mx-2" href="#!"
+              ><i class="fab fa-fw fa-linkedin-in"></i></a>
+        </div>
+    </footer> 
+    <!-- Copyright Section-->
+    <div class="copyright py-4 text-center text-white">
+      <div class="container">
+        <small>Copyright &copy;Sebastian Cardozo</small>
+      </div>
     </div>
-</section>
- </section>
- <!-- Footer-->
- <footer class="footer text-center">
-  <div class="container-footer">
-    <div class="grow">
-      <!-- Footer Social Icons-->
-      <div class="col-lg-12 ">
-        <h4 class="text-uppercase mb-4">Buscanos en Redes</h4>
-        <a class="btn btn-outline-light btn-social mx-1" href="#!"
-          ><i class="fab fa-fw fa-facebook-f"></i></a>
-        <a class="btn btn-outline-light btn-social mx-1" href="#!"
-          ><i class="fab fa-fw fa-twitter"></i ></a>
-        <a class="btn btn-outline-light btn-social mx-2" href="#!"
-          ><i class="fab fa-fw fa-linkedin-in"></i></a>
-    </div>
-</footer>
-</footer>
-<!-- Copyright Section-->
-<div class="copyright py-4 text-center text-white">
-  <div class="container">
-    <small>Copyright &copy; Sebastian Cardozo</small>
-  </div>
-</div>
- <script src="../js/contacto.js" ></script>
- <script
-      src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
-      crossorigin="anonymous"
-    ></script>
-</body>
-</html>
+    <script src="../js/contacto.js"></script>
+        <script
+        src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
+        crossorigin="anonymous"></script>
+    </body>
+    </html>
